[tool.poetry]
name = "code-sage"
version = "0.1.0"
description = ""
authors = ["Joe Mudryk <mudryk.joe@gmail.com>"]
readme = "README.md"
packages = [{include = "code_sage"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
django = "^4.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
